--- a/SpeculPlus/SpeculPlus/MainPage.xaml
+++ b/SpeculPlus/SpeculPlus/MainPage.xaml
@@ -2,26 +2,35 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SpeculPlus"
-             x:Class="SpeculPlus.MainPage">
+             x:Class="SpeculPlus.MainPage"
+             NavigationPage.HasNavigationBar="False">
 
     <StackLayout>
         <!-- Place new controls here -->
         <Label Text="Specul+" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand"
-           TextColor="AntiqueWhite"/>
+           TextColor="DarkGray"/>
 
-        <ListView ItemsSource="">
+        <ListView x:Name="listeProduits" HasUnevenRows="True" SelectionMode="None" ItemTapped="ListeProduits_ItemTapped">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    
+                    <ViewCell Height="90">
+                        <StackLayout Padding="10,5" Orientation="Horizontal" Spacing="10">
+                            <BoxView CornerRadius="45" Color="DarkGray" WidthRequest="80" />
+                            <StackLayout VerticalOptions="CenterAndExpand" Spacing="0">
+                                <Label Font="Bold" Text="{Binding Name}" FontSize="20" />
+                                <Label Text="{Binding Price, StringFormat='{0} €' }" />
+                            </StackLayout>
+                        </StackLayout>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
         <Button Text="Scanner un produit"
             BackgroundColor="DarkGray"
-            Clicked="Button_Clicked"/>
+            Clicked="ScanButton_Clicked"/>
 
     </StackLayout>
 
