ItemList -> CollectionView & Category management

--- a/SpeculPlus/SpeculPlus/MainPage.xaml
+++ b/SpeculPlus/SpeculPlus/MainPage.xaml
@@ -5,38 +5,118 @@
              x:Class="SpeculPlus.MainPage"
              NavigationPage.HasNavigationBar="False">
 
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Color x:Key="mainColor">#ff8c75</Color>
+            <Color x:Key="dominantColor">#a8432f</Color>
+        </ResourceDictionary>
+        
+        <Style TargetType="Grid">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="{StaticResource mainColor}"/>
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentPage.Resources>
+    
     <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Specul+" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand"
-           TextColor="DarkGray"/>
 
-        <ListView x:Name="listeProduits" ItemsSource="{Binding ProductList}" HasUnevenRows="True" SelectionMode="None" ItemTapped="ListeProduits_ItemTapped">
-            <ListView.ItemTemplate>
+        <StackLayout Orientation="Horizontal">
+            <Label Text="Mes produits" 
+                       Margin="8,8,8,0"
+                       FontSize="Medium"
+                       TextColor="Black"
+                       FontAttributes="Bold"/>
+        </StackLayout>
+
+        <CollectionView x:Name="listeProduits" SelectionMode="Single" ItemsSource="{Binding ProductsCategory}" IsGrouped="True" >
+            <CollectionView.ItemsLayout>
+                <GridItemsLayout Orientation="Vertical" Span="2" />
+            </CollectionView.ItemsLayout>
+
+            <CollectionView.EmptyView>
+                <StackLayout>
+                    <Label Text="Aucun produit :-("
+                       Margin="10,25,10,10"
+                       FontAttributes="Bold"
+                       FontSize="18"
+                       HorizontalOptions="Fill"
+                       HorizontalTextAlignment="Center" />
+                    <Label Text="Lancez-vous, scannez!"
+                       FontAttributes="Italic"
+                       FontSize="12"
+                       HorizontalOptions="Fill"
+                       HorizontalTextAlignment="Center" />
+                </StackLayout>
+            </CollectionView.EmptyView>
+
+            <CollectionView.GroupHeaderTemplate>
                 <DataTemplate>
-                    <ViewCell Height="90">
-                        <StackLayout Padding="10,5" Orientation="Horizontal" Spacing="10">
-                            <Image Source="{Binding Image}" WidthRequest="80" />
-                            <StackLayout VerticalOptions="CenterAndExpand" Spacing="0">
-                                <Label Font="Bold" Text="{Binding Name}" FontSize="20" />
-                                <Label Text="{Binding Price, StringFormat='{0} €'}" />
-                            </StackLayout>
-                        </StackLayout>
-                        <ViewCell.ContextActions>
-                            <MenuItem Clicked="Supprimer_Item" Text="Supprimer" />
-                        </ViewCell.ContextActions>
-                    </ViewCell>
+                    <Label Text="{Binding Name}"
+                        BackgroundColor="{StaticResource dominantColor}"
+                           TextColor="{Binding Color}"
+                        FontSize="Large"
+                        FontAttributes="Bold" />
                 </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+            </CollectionView.GroupHeaderTemplate>
+
+            <CollectionView.GroupFooterTemplate>
+                <DataTemplate>
+                    <Label Text="{Binding Count, StringFormat='Nombre de produits: {0:D}'}"
+                   Margin="0,0,0,10" />
+                </DataTemplate>
+            </CollectionView.GroupFooterTemplate>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Padding="10" Margin="12">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="3*" />
+                            <RowDefinition Height="1*" />
+                        </Grid.RowDefinitions>
+
+                        <Image Source="{Binding Image}"
+                                   Grid.Row="0"
+                                   Aspect="AspectFill"
+                                   WidthRequest="100"
+                                   HeightRequest="150" />
+                        <StackLayout Grid.Row="1">
+                            <Label Grid.Column="1"
+                                       VerticalOptions="Center"
+                                       Text="{Binding Name}"
+                                       FontAttributes="Bold" />
+                            <Label Text="{Binding Price, StringFormat='{0:F2} €'}"
+                                       Grid.Row="1"
+                                       Grid.Column="1"
+                                       VerticalOptions="Start"
+                                       FontAttributes="Italic" />
+                        </StackLayout>
+                    </Grid>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+
         <!--
+        <Button Text="Save"
+            BackgroundColor="DarkGray"
+            Clicked="SaveList"/>
+        
         <Button Text="Add"
             BackgroundColor="DarkGray"
             Clicked="AddProduct"/>
         -->
+        
         <Button Text="Scanner un produit"
-            BackgroundColor="IndianRed"
+            BackgroundColor="{StaticResource dominantColor}"
             TextColor="Black"
             Clicked="ScanButton_Clicked"/>
 
