--- a/SpeculPlus/SpeculPlus/EditPage.xaml
+++ b/SpeculPlus/SpeculPlus/EditPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:microcharts="clr-namespace:Microcharts.Forms;assembly=Microcharts.Forms" 
-             x:Class="SpeculPlus.EditPage">
+             x:Class="SpeculPlus.EditPage"
+             Title="Édition">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="mainColor">#ff8c75</Color>
@@ -23,26 +24,22 @@
 
             <!-- Statistiques -->
             <StackLayout Grid.Row="1" Grid.ColumnSpan="2">
-                <Label Margin="10,0,0,0" Text="Statistiques"/>
+                <Label Margin="10,0,0,0" Text="Statistiques" FontAttributes="Bold" FontSize="Title" TextColor="Black" />
 
-                <ScrollView>
-                    <StackLayout>
-                        <microcharts:ChartView x:Name="priceChart" />
-                    </StackLayout>
-                </ScrollView>
+                <Label Margin="10,0,0,0" Text="Amazon" />
+                <microcharts:ChartView HeightRequest="150" x:Name="priceChart" BackgroundColor="White" />
 
                 <Button
                         VerticalOptions="EndAndExpand"
-                        TextColor="White"
                         FontSize="Medium"
                         Text="Terminer"
                         BackgroundColor="{StaticResource dominantColor}"
-                        Clicked="AddProduct_Clicked"/>
+                        Clicked="AddProduct_Clicked" />
             </StackLayout>
 
             <!-- Informations du produit -->
             <StackLayout Grid.Column="1">
-                <Label FontAttributes="Bold" Text="Informations" />
+                <Label FontAttributes="Bold" Text="Informations" FontSize="Title" TextColor="Black" />
                 <Grid>
                     <Label Margin="2,0,0,0" Text="Nom du produit"/>
                     <Entry Margin="0,10,0,0" x:Name="name" Text="{Binding Name}" TextColor="Black" />
@@ -52,8 +49,8 @@
                     <Entry Margin="0,10,0,0" x:Name="price" Text="{Binding Price}" TextColor="Black" />
                 </Grid>
                 <Grid>
-                    <Label Margin="2,0,0,0" Text="Catégorie" TextColor="Black"/>
-                    <Picker Margin="0,10,0,0" x:Name="listCat" Title="Catégorie"/>
+                    <Label Margin="2,0,0,0" Text="Catégorie" />
+                    <Picker Margin="0,10,0,0" x:Name="listCat" Title="Catégorie" ItemDisplayBinding="{Binding Name}" />
                 </Grid>
             </StackLayout>
             
